Adicionada uma section para o crossfade da img

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
             </ul>
             </nav>
         </section><!-- fim .menu-departamentos -->
-
-        <img src="img/destaque-home.png" alt="Promoção: Big City Night">      
+<section class="cssfade">
+        <img class="bottom" src="img/destaque-home-2.png" alt="Promoção: Big City Night">  
+        <img class="top" src="img/destaque-home.png" alt="Sunny Days">    
+</section>
 </div>
 
 <div class="container paineis">
@@ -69,7 +71,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura1.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -77,7 +79,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura1.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -85,7 +87,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura1.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -93,7 +95,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura1.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -101,7 +103,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura1.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -109,7 +111,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura1.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -123,7 +125,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura1.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption> <!-- foi adicionado <br> para dar espaçamento no texto -->
                     </figure>
                 </a>
             </li>
@@ -131,7 +133,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura3.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -139,7 +141,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura2.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -147,7 +149,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura4.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -155,7 +157,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura5.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
@@ -163,7 +165,7 @@
                 <a href="produto.html">
                     <figure>
                         <img src="img/produtos/miniatura6.png">
-                        <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        <figcaption><br>Fuzz Cardigan por R$ 129,90</figcaption>
                     </figure>
                 </a>
             </li>
