--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </ul>
             </nav>
         </section><!-- fim .menu-departamentos -->
-<section class="cssfade">
+<section class="cssfade"> <!-- CROSSFADE ENTRE IMAGENS -->
         <img class="bottom" src="img/destaque-home-2.png" alt="Promoção: Big City Night">  
         <img class="top" src="img/destaque-home.png" alt="Sunny Days">    
 </section>
