Adicionado btn carrinho

--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/sobre.css"> <!-- importando o arquivo css-->  
     </head> <!-- fim cabecalho-->
 <body>
-    
+
     <div class="imagen container">
             <img src="img/logo.png"> <!-- logo da empresa-->
             <p class="sacola">
@@ -27,6 +27,7 @@
                     <li><a href="#">Cartão Fidelidade</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="#">Ajuda</a></li>
+                    <a href="https://www.google.com.br/?gws_rd=cr&ei=PujSWPi7IYWwwgSvnqmYDA"><button class="btn-info" > Carrinho</button></a>
                 </ul>
             </nav><!--fim bloco-->
         </header>		
