--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Mirror Fashion</title>
@@ -47,7 +47,15 @@
 
             <nav>
             <ul>
-                <li><a href="#">blusas e camisas</a></li>
+                <li><a href="#">blusas e camisas</a>
+                    <ul>
+                        <li><a href="#">manga curta</a></li>
+                        <li><a href="#">manga longa</a></li>
+                        <li><a href="#">camisa social</a></li>
+                        <li><a href="#">camisa causal</a></li>
+                        <li><a href="#">basica</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">calças</a></li>
                 <li><a href="#">saias</a></li> 
                 <li><a href="#">vestidos</a></li>
@@ -183,5 +191,6 @@
     </ul>
     </div>
 </footer>
+
     </body>
 </html>
