--- a/sobre.html
+++ b/sobre.html
@@ -22,6 +22,7 @@
 
             <nav class="menu-opcoes container"><!--blocos de nvaegacao-->
                 <ul>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#">Sua Conta</a></li>
                     <li><a href="#">Lista de desejos</a></li>
                     <li><a href="#">Cartão Fidelidade</a></li>
@@ -33,7 +34,6 @@
         </header>		
 	                                <!--fim cabecalho-->
 <h1>A Mirror Fashion</h1>
-
 
 <p>A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. 
 Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de 
