Bordas no painel

--- a/testes.html
+++ b/testes.html
@@ -24,11 +24,13 @@
 
             <nav class="menu-opcoes container"><!--blocos de nvaegacao-->
                 <ul>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#">Sua Conta</a></li>
                     <li><a href="#">Lista de desejos</a></li>
                     <li><a href="#">Cartão Fidelidade</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="#">Ajuda</a></li>
+                    <a href="https://www.google.com.br/?gws_rd=cr&ei=PujSWPi7IYWwwgSvnqmYDA"><button class="btn-info" > Carrinho</button></a>
                 </ul>
             </nav><!--fim bloco-->
         </header>		
@@ -44,6 +46,7 @@ Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 
     <a href="..."> Link 1 </a>
     <a href="..."> Link 2 </a>
     <a href="..."> Link 3 </a>
+    
     </section>
 <br><br>
     <section class="seletores container">
@@ -65,12 +68,17 @@ Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 
     </section>
 </article>
 
+            <!--teste com crossfade de imagens-->
 <div id="crossfade"> <!-- teste com transição crossfade-->
-    <img class="bottom" src="img/produtos/miniatura1.png">
-    <img class="top" src="img/produtos/miniatura2.png">
+<h2>crossfade</h2>
+    <img class="bottom" src="img/produtos/miniatura3.png">
+    <img class="top" src="img/produtos/miniatura4.png">
 </div>
+            
 
-<div class="navbar">
+
+<!--criando menu dropdown css3-->
+<div class="navbar container dropdown">
      <ul>
          <li><a href="default.asp">Home</a></li>
         <li><a href="news.asp">News</a></li>
@@ -78,6 +86,25 @@ Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 
         <li><a class="test3" href="about.asp">About</a></li>
     </ul> 
 </div>
+        <!-- trabalhando com gradientes-->
+<div class="linear container">
+    adfadfadfadfsadf
+<br><br><br><br>
+</div>
+<div class="gradiente container">
+    adfadfadfadfsadf
+<br><br><br><br>
+</div>
+<div class="radial container">
+    adfadfadfadfsadf
+    <br><br><br><br>
+</div>
+<div class="gradiente container">
+    adfadfadfadfsadf
+<br><br><br><br>
+</div>
+
+
 
 </body>
 </html>
