adicionado placeholder na busca

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2>Busca</h2>
 
             <form>
-                <input type="search">
+                <input type="search" placeholder="Buscar...">
                 <input type="image" src="img/busca.png" class="lupa">
             </form>
         </section> <!-- fim busca-->
